--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "a front-engin-arch template",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/huangxok/Front-Engin-Arch/issues"
   },
-  "homepage": "https://github.com/huangxok/Front-Engin-Arch#readme"
+  "homepage": "https://github.com/huangxok/Front-Engin-Arch#readme",
+  "devDependencies": {
+    "husky": "^8.0.3"
+  }
 }
